M5.2: ADR 0001 §Sample-run — factorial.rrssa round-trip through rvm
Bead: bennettvm-7jm (closed). PRD v4 §3.1.

Runs programs/rssa/factorial.rrssa forward then backward through rvm
with --print-main --count-instructions. Captures both transcripts
verbatim and the five observations they support:

  1. Round-trip exactness (x=5→x=0; x=0→x=5; result=0→120→0) with
     zero history tape.
  2. Identical total instruction count (46 fw, 46 bw) — no "undo"
     ops; the same code under the dual transition relation.
  3. Block-level swap (Lfactorial_2: 8↔24, Lfactorial_3: 24↔8) —
     dual-address LabelTable dispatch.
  4. Conditional-entry/exit predicates are the load-bearing
     symmetric-dispatch primitive; M5.3 will map these to Phase-2
     Julia naming.
  5. No O(steps) state growth — the contrast with the Phase-0 spike.

Also captures a runtime preview-features gotcha: JAVA_TOOL_OPTIONS=
"--enable-preview" is required at the runtime java invocation; the
launcher only sets it for the mvn compile step. Documented so future
M5.x agents don't relearn it from the stack trace.

Source: docs/adr/0001-rc3-rvm-smoke.md §Sample-run (this file);
references/implementations/RC3/programs/rssa/factorial.rrssa.
Reuse: RC3 rvm (Deworetzki/Meyer/Ritzke/Schuster 2021) — invoked,
not reimplemented. Yokoyama-Glück 2007 PEPM (no-history reversible
self-interpretation) — observed in the transcript.
Why not reuse further: BennettVM's source is irreversible-Julia, not
reversible-by-construction; the no-history property RC3 enjoys is
not directly available to Phase-2. The transcript grounds the
history-layer design requirement (§3.3).
Validation: SHA256 of factorial.rrssa transcript captured in
/tmp/rvm-{forward,backward}.log; values transcribed into ADR
literally. fw+bw both report "Total executed instructions: 46".
Review: mechanical observation; ADR §Sample-run is summary +
transcript only, no Phase-2 code introduced. Reviewer-exempt per
Rule 6 "small" tier (≤30 LOC equivalent change, one 